<resources>
    <string name="ActionNotCompatibleWithSelectedComponents">This action is not compatible with the component(s) you selected. If you choose to continue, the component(s) will be cleared. Do you want to continue?</string>
    <string name="CantBeEmptyField">Field cannot be empty</string>
    <string name="ComponentsAlreadySelected">Components already selected.</string>
    <string name="ComponentsMaxLimitReached">"Can't add more component as the maximum limit has been reached."</string>
    <string name="ComponentsNotAvailable">No more components available to assign.</string>
    <string name="Counter">Counter</string>
    <string name="Custom">Custom</string>
    <string name="DefaultPort">8801</string>
    <string name="DeleteAction">Delete action when expired</string>
    <string name="DoubleZero">00</string>
    <string name="Duration">Duration</string>
    <string name="EXCEL">EXCEL</string>
    <string name="EmailSendSuccessfully">E-mail sent successfully</string>
    <string name="EnableGoPass">Enable Go Pass</string>
    <string name="End">End</string>
    <string name="EntrapassGOCommaSpace">EntraPassGO:</string>
    <string name="Exit">Exit</string>
    <string name="FifteenMinutes">Last 15 minutes</string>
    <string name="FiveMinutes">Last 5 minutes</string>
    <string name="FourHours">Last 4 hours</string>
    <string name="HHMM0">00:00</string>
    <string name="HHMM24">24:00</string>
    <string name="HintAT">\@</string>
    <string name="HintEmail">User@Email.com</string>
    <string name="Intrusion">Intrusion</string>
    <string name="MacroMaker">Macromaker</string>
    <string name="One">01</string>
    <string name="PDF">PDF</string>
    <string name="PartitionArmed">Armed</string>
    <string name="PartitionArmedAwayZeroDelay">Armed away zero delay</string>
    <string name="PartitionArmedStay">Arm stay</string>
    <string name="PartitionArmedStayZeroDelay">Armed stay zero delay</string>
    <string name="PartitionEntryDelayInProgress">Entry delay in progress</string>
    <string name="PartitionExitDelayInProgress">Exit delay in progress</string>
    <string name="PartitionInAlarm">In alarm</string>
    <string name="PartitionInAlarmDisarmed">In alarm (disarmed)</string>
    <string name="PartitionNotConnected">Not connected</string>
    <string name="PartitionNotReady">Not ready</string>
    <string name="PartitionReady">Ready</string>
    <string name="PartitionUnknown">Unknown</string>
    <string name="Paused">Paused</string>
    <string name="Recurring">Recurring</string>
    <string name="Relay">Relay</string>
    <string name="Report_Access">Access</string>
    <string name="Report_AlarmSystem">Alarm System</string>
    <string name="Report_All">All</string>
    <string name="Report_Area">Area</string>
    <string name="Report_Camera">Camera</string>
    <string name="Report_Controller">Controller</string>
    <string name="Report_Database">Database</string>
    <string name="Report_Door">Door</string>
    <string name="Report_DoorEntry">KTES</string>
    <string name="Report_DoorEntryController">Door Entry Controller</string>
    <string name="Report_GuardTour">Guard Tour</string>
    <string name="Report_Input">Input</string>
    <string name="Report_Login">Login</string>
    <string name="Report_ManualOperation">Manual Operation</string>
    <string name="Report_Matrix">Video Server</string>
    <string name="Report_Operator">Operator</string>
    <string name="Report_Relay">Relay</string>
    <string name="Report_Server">Server</string>
    <string name="Report_TimeAndAttendance">Time And Attendance</string>
    <string name="RestrictedMessage">Restricted</string>
    <string name="RootDetected">This device is rooted.</string>
    <string name="RootDetectedMessage">You can not use this app.</string>
    <string name="STRComma">:</string>
    <string name="Search">SEARCH</string>
    <string name="SendEmailNotification">Send email notification</string>
    <string name="SixtyMinutes">Last 60 minutes</string>
    <string name="SmartService">SmartService</string>
    <string name="SmartServiceCommaSpace">SmartService:</string>
    <string name="SmartlinkCommaSpace">SmartLink:</string>
    <string name="Start">Start</string>
    <string name="Title">Title</string>
    <string name="ToBeActivated">To be Activated</string>
    <string name="TwentyFoundHours">Last 24 hours</string>
    <string name="URLCommaSpace">URL:</string>
    <string name="Versions">Versions</string>
    <string name="YYYYMMDDHR">YYYY-MM-DD / HR</string>
    <string name="ZoneAlarm">In alarm</string>
    <string name="ZoneBypassed">Bypassed</string>
    <string name="ZoneClosed">Closed</string>
    <string name="ZoneFault">Fault</string>
    <string name="ZoneOpened">Opened</string>
    <string name="ZoneTamper">Tamper</string>
    <string name="ZoneUnknown">Unknown</string>
    <string name="_1_100">1–100</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accesslevel">Access Level</string>
    <string name="action">Action</string>
    <string name="actionType">Action Type</string>
    <string name="actionname">Action Name</string>
    <string name="activate_temp">Temporarily activate</string>
    <string name="active">Active</string>
    <string name="add">Add</string>
    <string name="add_door_exception">Add A Door Exception</string>
    <string name="add_interval">Add this interval</string>
    <string name="add_row_card">Add a new card</string>
    <string name="additional_accesslevels">Additional Access Levels</string>
    <string name="alert">Alert</string>
    <string name="all_day">All Day</string>
    <string name="allow">Allow</string>
    <string name="android.credentials.TYPE_PASSWORD_CREDENTIAL">Password</string>
    <string name="androidx.credentials.TYPE_PUBLIC_KEY_CREDENTIAL">Passkey</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_loading">Loading…</string>
    <string name="app_name">EntraPass Go</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="badge">Badge</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="broker_helper_manifest">Intent filter for AndroidManifest.xml</string>
    <string name="broker_helper_package">Package name to enter when registering app</string>
    <string name="broker_helper_redirect">Redirect URI for configuration json file</string>
    <string name="broker_helper_signature">Signature to enter when registering app</string>
    <string name="broker_helper_title">MSAL Redirect URI Info</string>
    <string name="broker_processing">Broker is processing</string>
    <string name="cameraCanceled">The user cancelled image capture!</string>
    <string name="cameraFail">Sorry! Failed to capture image!</string>
    <string name="cameraNotAvailable">Camera feature not available!</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_button">Cancel Button</string>
    <string name="cardTypeIsMandatory">Card Type is mandatory!</string>
    <string name="cardnumber">Card Number</string>
    <string name="cardstate">Card State</string>
    <string name="cardtype">Card Type</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear">Clear</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="commaspace">,</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="delete">Delete</string>
    <string name="dev_version">© 2016, EntraPass Go Version 2.0</string>
    <string name="emptystring" />
    <string name="hint_port_number">8801</string>
    <string name="hint_servername">SmartService</string>
    <string name="hint_serverurl">www.myurl.com</string>
    <string name="more_servers">More Servers</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="password">Password</string>
    <string name="port">Port</string>
    <string name="port_number">8801</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="secure_login">Secure Login</string>
    <string name="server_name">Server Name</string>
    <string name="server_url">Server URL</string>
    <string name="username">Username</string>
    <string name="video_search">Video Search</string>
    <string name="yubikit_otp_activity_title">Authenticate</string>
    <string name="yubikit_prompt_enable_nfc">Enable NFC</string>
    <string name="yubikit_prompt_image_desc">YubiKey image</string>
    <string name="yubikit_prompt_plug_in_or_tap">Hold your YubiKey flat against the back of your device, or connect it via USB.</string>
</resources>