<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/bg_main" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include android:id="@id/fl_progressbar" layout="@layout/progressbar" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="2.0">
        <FrameLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
        <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:fillViewport="true">
            <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:layout_width="320.0dip" android:layout_height="wrap_content">
                <FrameLayout android:id="@id/shadowBackground" android:layout_width="fill_parent" android:layout_height="530.0dip" android:layout_marginTop="40.0dip" android:layout_marginStart="15.0dip" android:layout_marginEnd="15.0dip">
                    <FrameLayout android:background="@drawable/background_gray_inner" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:layout_marginStart="10.0dip" android:layout_marginEnd="10.0dip" />
                    <RelativeLayout android:id="@id/rl_login_center" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <TextView android:textSize="15.0sp" android:textColor="@android:color/black" android:gravity="center_vertical" android:id="@id/tv_servername" android:layout_width="fill_parent" android:layout_height="20.0dip" android:layout_marginTop="18.0dip" android:layout_marginBottom="2.0dip" android:text="@string/server_name" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip" />
                        <EditText android:textSize="15.0sp" android:textColor="#ff000000" android:id="@id/et_servername" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="0.0dip" android:hint="@string/server_name" android:layout_below="@id/tv_servername" android:inputType="textVisiblePassword" android:imeOptions="actionNext" android:layout_alignStart="@id/tv_servername" android:layout_alignEnd="@id/tv_servername" style="@style/Kantech.EditTextStyle" />
                        <TextView android:textSize="15.0sp" android:textColor="@android:color/black" android:gravity="center_vertical" android:id="@id/tv_serverurl" android:layout_width="fill_parent" android:layout_height="20.0dip" android:layout_marginTop="4.0dip" android:layout_marginBottom="2.0dip" android:text="@string/server_url" android:layout_below="@id/et_servername" android:layout_alignStart="@id/tv_servername" android:layout_alignEnd="@id/tv_servername" />
                        <EditText android:textSize="15.0sp" android:textColor="#ff000000" android:id="@id/et_serverurl" android:layout_width="fill_parent" android:layout_height="40.0dip" android:hint="@string/hint_serverurl" android:maxLines="1" android:layout_below="@id/tv_serverurl" android:inputType="textVisiblePassword" android:imeOptions="actionNext" android:layout_alignStart="@id/tv_serverurl" android:layout_alignEnd="@id/tv_servername" style="@style/Kantech.EditTextStyle" />
                        <TextView android:textSize="15.0sp" android:textColor="@android:color/black" android:gravity="center_vertical" android:id="@id/tv_service" android:layout_width="fill_parent" android:layout_height="20.0dip" android:layout_marginTop="4.0dip" android:layout_marginBottom="2.0dip" android:text="@string/hint_servername" android:layout_below="@id/et_serverurl" android:layout_alignStart="@id/tv_servername" android:layout_alignEnd="@id/tv_servername" />
                        <EditText android:textSize="15.0sp" android:textColor="#ff000000" android:id="@id/et_service" android:layout_width="fill_parent" android:layout_height="40.0dip" android:hint="@string/hint_servername" android:maxLines="1" android:layout_below="@id/tv_service" android:inputType="textVisiblePassword" android:imeOptions="actionNext" android:layout_alignStart="@id/tv_serverurl" android:layout_alignEnd="@id/tv_servername" style="@style/Kantech.EditTextStyle" />
                        <TextView android:textSize="15.0sp" android:textColor="@android:color/black" android:gravity="center_vertical" android:id="@id/tv_username" android:layout_width="fill_parent" android:layout_height="20.0dip" android:layout_marginTop="4.0dip" android:layout_marginBottom="2.0dip" android:text="@string/username" android:layout_below="@id/et_service" android:layout_alignStart="@id/tv_serverurl" android:layout_alignEnd="@id/tv_serverurl" />
                        <EditText android:textSize="15.0sp" android:textColor="#ff000000" android:id="@id/et_username" android:layout_width="fill_parent" android:layout_height="40.0dip" android:hint="@string/username" android:maxLines="1" android:layout_below="@id/tv_username" android:inputType="textVisiblePassword" android:imeOptions="actionNext" android:layout_alignStart="@id/tv_username" android:layout_alignEnd="@id/tv_servername" style="@style/Kantech.EditTextStyle" />
                        <TextView android:textSize="15.0sp" android:textColor="@android:color/black" android:gravity="center_vertical" android:id="@id/tv_password" android:layout_width="fill_parent" android:layout_height="20.0dip" android:layout_marginTop="4.0dip" android:layout_marginBottom="2.0dip" android:text="@string/password" android:layout_below="@id/et_username" android:layout_alignStart="@id/tv_username" android:layout_alignEnd="@id/tv_username" />
                        <EditText android:textSize="15.0sp" android:textColor="#ff000000" android:id="@id/et_password" android:layout_width="fill_parent" android:layout_height="40.0dip" android:hint="@string/password" android:layout_below="@id/tv_password" android:inputType="textPassword" android:imeOptions="actionNext" android:layout_alignStart="@id/tv_password" android:layout_alignEnd="@id/tv_servername" style="@style/Kantech.EditTextStyle" />
                        <LinearLayout android:orientation="horizontal" android:id="@id/rl" android:layout_width="fill_parent" android:layout_height="60.0dip" android:layout_marginTop="4.0dip" android:baselineAligned="false" android:layout_below="@id/et_password" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip">
                            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="fill_parent">
                                <TextView android:textSize="15.0sp" android:textColor="@android:color/black" android:layout_gravity="center_vertical" android:id="@id/tv_port" android:layout_width="fill_parent" android:layout_height="20.0dip" android:text="@string/port" />
                                <EditText android:textSize="15.0sp" android:textColor="#ff000000" android:id="@id/et_port" android:layout_width="76.0dip" android:layout_height="40.0dip" android:text="@string/port_number" android:hint="@string/hint_port_number" android:inputType="number" android:imeOptions="actionDone" style="@style/Kantech.EditTextStyle" />
                            </LinearLayout>
                            <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.8">
                                <TextView android:textSize="15.0sp" android:textColor="@android:color/black" android:layout_gravity="end" android:id="@id/tv_secure_login" android:layout_width="wrap_content" android:layout_height="20.0dip" android:text="@string/secure_login" />
                                <LinearLayout android:gravity="end" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
                                    <TextView android:textSize="13.0sp" android:textColor="@android:color/black" android:gravity="center" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/off" />
                                    <androidx.appcompat.widget.SwitchCompat android:textSize="12.0sp" android:textColor="@color/blue_grey_950" android:layout_gravity="center_vertical" android:id="@id/btn_secure_login" android:layout_width="wrap_content" android:layout_height="fill_parent" android:textOn="" android:textOff="" android:thumb="@drawable/thumb_big" android:layout_marginStart="7.0dip" android:layout_marginEnd="7.0dip" app:showText="true" app:track="@drawable/trackblue" />
                                    <TextView android:textSize="13.0sp" android:textColor="@android:color/black" android:gravity="center" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/on" />
                                </LinearLayout>
                            </LinearLayout>
                        </LinearLayout>
                        <LinearLayout android:orientation="horizontal" android:id="@id/llButtons" android:layout_width="fill_parent" android:layout_height="58.0dip" android:layout_marginTop="0.0dip" android:layout_marginBottom="7.0dip" android:baselineAligned="false" android:weightSum="2.0" android:layout_below="@id/rl" android:layout_marginStart="10.0dip" android:layout_marginEnd="10.0dip">
                            <FrameLayout android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
                                <FrameLayout android:background="@drawable/bg_btn_blue" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="10.0dip" />
                                <Button android:textSize="16.0sp" android:textColor="@android:color/white" android:gravity="center" android:id="@id/btnSave" android:background="@color/transparent" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/save" />
                            </FrameLayout>
                            <FrameLayout android:layout_width="0.0dip" android:layout_height="58.0dip" android:layout_weight="1.0">
                                <FrameLayout android:background="@drawable/bg_btn_gray" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="10.0dip" />
                                <Button android:textSize="16.0sp" android:textColor="@android:color/white" android:gravity="center" android:id="@id/btnDelete" android:background="@color/transparent" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/delete" />
                            </FrameLayout>
                        </LinearLayout>
                        <FrameLayout android:layout_width="fill_parent" android:layout_height="58.0dip" android:layout_marginTop="-18.0dip" android:layout_marginBottom="10.0dip" android:layout_below="@id/llButtons" android:layout_marginStart="10.0dip" android:layout_marginEnd="10.0dip">
                            <FrameLayout android:background="@drawable/bg_btn_gray" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="10.0dip" />
                            <Button android:textSize="16.0sp" android:textColor="@android:color/white" android:id="@id/btnMoreServer" android:background="@color/transparent" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/more_servers" />
                        </FrameLayout>
                    </RelativeLayout>
                </FrameLayout>
                <TextView android:textSize="12.0sp" android:textColor="@color/grayLight" android:gravity="center" android:id="@id/tv_version" android:layout_width="fill_parent" android:layout_height="20.0dip" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" android:text="@string/dev_version" />
            </LinearLayout>
        </ScrollView>
        <FrameLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>